--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
 	  "allowJs": true,
 	  "checkJs": true
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+	"include": ["logic/**/*.d.ts", "logic/**/*.ts", "logic/**/*.js", "logic/**/*.svelte"]
   }
   
