--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
 		"tslib": "^2.2.0",
 		"typescript": "^4.3.2",
 		"vite": "^2.5.4"
+	},
+	"dependencies": {
+		"@types/three": "^0.131.1",
+		"three": "^0.132.2"
 	}
 }
