--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"@types/three": "^0.131.1",
-		"three": "^0.132.2"
+		"three": "^0.132.2",
+		"vite-plugin-externals": "^0.3.0"
 	}
 }
