--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
 		"@tsconfig/svelte": "^2.0.1",
 		"autoprefixer": "^10.3.4",
+		"eventemitter3": "^4.0.7",
 		"postcss": "^8.3.6",
 		"sass": "^1.41.0",
 		"svelte": "^3.37.0",
